# fast-hopcroft

./: CMakeLists.txt  ProjectHome.md  README
QAnalyze/: QAnalyze.sln
QAnalyze/QAnalyze/: App.config  Program.cs  QAnalyze.csproj  packages.config
QAnalyze/QAnalyze/Properties/: AssemblyInfo.cs
branches/berstel/src/: BitSet.h  BitUtil.h  BitUtil_uint32.h  BitUtil_uint64.h  Dfa.h  DfaGraphVizExporter.h  MinimizationHopcroft.h  main.cpp
branches/intsets/: README
branches/intsets/src/: AfdParser.h  BitSet.h  Dfa.h  MinimizationHopcroft.h
src/: AfdParser.h  BitSet.h  BitUtil.h  BitUtil_uint32.h  BitUtil_uint64.h  Determinization.h  Dfa.h  DfaExporter.h  DfaGenerator.h  DfaPlainTextReader.h  Fsa.h  FsaFormat.h  FsaFormatReader.h  FsaGraphVizWriter.h  FsaPlainTextWriter.h  FsmGraphVizWriter.h  FsmPlainTextReader.h  FsmPlainTextWriter.h  IFsaReader.h  MinimizationAlgorithm.h  MinimizationAtomic.h  MinimizationBrzozowski.h  MinimizationHopcroft.h  MinimizationHybrid.h  MinimizationIncremental.h  Nfa.h  NfaGenerator.h  Set.h  dynamic_bitset.h  main.cpp
src/convert_nfa_dfa/: main.cpp
src/determinize/: CMakeLists.txt  main.cpp
src/generate_nfa/: main.cpp
src/minimize/: CMakeLists.txt  main.cpp
src/minimize_brzozowski/: CMakeLists.txt  main.cpp
src/minimize_hopcroft/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  test.cpp
src/transcode/: main.cpp
trunk/: CMakeLists.txt
trunk/src/: AfdParser.h  AfdParser2.h  AlmeidaPlainTextReader.h  BitSet.h  BitUtil.h  BitUtil_uint32.h  BitUtil_uint64.h  Determinization.h  Dfa.h  DfaGenerator.h  DfaGraphVizExporter.h  DfaPlainTextWriter.h  Fsa.h  FsaFormat.h  FsaFormatReader.h  FsaPlainTextReader.h  FsmPlainTextReader.h  FsmPlainTextWriter.h  IFsaWriter.h  MinimizationAtomic.h  MinimizationBrzozowski.h  MinimizationHopcroft.h  MinimizationHybrid.h  MinimizationIncremental.h  NfaGenerator.h  Set.h  dynamic_bitset.h  main.cpp
trunk/src/convert_nfa_dfa/: CMakeLists.txt  main.cpp
trunk/src/determinize/: CMakeLists.txt  main.cpp
trunk/src/generate_dfa/: CMakeLists.txt  main.cpp
trunk/src/generate_nfa/: CMakeLists.txt  main.cpp
trunk/src/minimize/: CMakeLists.txt  main.cpp
trunk/src/minimize_hopcroft/: main.cpp
trunk/src/test/: CMakeLists.txt  test.cpp
trunk/src/transcode/: CMakeLists.txt  main.cpp
