add_executable(test test.cpp)
enable_testing()

add_test(test50 test 50)

add_test(test100 test 100)
add_test(test101 test 101)
add_test(test102 test 102)
add_test(test103 test 103)
add_test(test104 test 104)

add_test(test200 test 200)
add_test(test201 test 202)
add_test(test202 test 202)
add_test(test203 test 203)

add_test(test300 test 300)
add_test(test301 test 301)
add_test(test302 test 302)
add_test(test303 test 303)

add_test(test600 test 600)
add_test(test601 test 601)
add_test(test602 test 602)
add_test(test603 test 603)
add_test(test610 test 610)